--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-mysql-connector-python==8.1.0
+#mysql-connector-python==8.1.0
